--- a/VKontakteApp/Base.lproj/Main.storyboard
+++ b/VKontakteApp/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +10,96 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="VKontakteApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zgV-sf-FpE">
+                                <rect key="frame" x="0.0" y="44" width="390" height="766"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="compactLogo" translatesAutoresizingMaskIntoConstraints="NO" id="fm9-eF-dOe">
+                                        <rect key="frame" x="115" y="65" width="160" height="160"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="160" id="mar-fN-lyg"/>
+                                            <constraint firstAttribute="width" constant="160" id="o9X-fF-Tzg"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Логин" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AHZ-se-FDP">
+                                        <rect key="frame" x="163" y="285" width="64" height="28"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="20"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="l2f-Tk-y26">
+                                        <rect key="frame" x="95" y="321" width="200" height="37"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="200" id="vi6-XK-H5Y"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="20"/>
+                                        <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
+                                    </textField>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Пароль" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Nz-6I-wXA">
+                                        <rect key="frame" x="156" y="392" width="78" height="28"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="20"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="dN6-hf-SfH">
+                                        <rect key="frame" x="95" y="428" width="200" height="36"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="200" id="kTA-Tn-u19"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="20"/>
+                                        <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES" secureTextEntry="YES" textContentType="password"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MJA-LH-i9D">
+                                        <rect key="frame" x="163" y="538" width="64" height="40"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="20"/>
+                                        <state key="normal" title="Войти">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="fm9-eF-dOe" firstAttribute="top" secondItem="zgV-sf-FpE" secondAttribute="top" constant="65" id="1k3-3p-ToK"/>
+                                    <constraint firstAttribute="trailing" secondItem="MJA-LH-i9D" secondAttribute="trailing" constant="163" id="4Ih-OD-27n"/>
+                                    <constraint firstAttribute="trailing" secondItem="0Nz-6I-wXA" secondAttribute="trailing" constant="156" id="LcB-1J-ABM"/>
+                                    <constraint firstAttribute="trailing" secondItem="AHZ-se-FDP" secondAttribute="trailing" constant="163" id="OLu-L7-ZId"/>
+                                    <constraint firstItem="MJA-LH-i9D" firstAttribute="centerX" secondItem="zgV-sf-FpE" secondAttribute="centerX" id="Rdh-1w-3RV"/>
+                                    <constraint firstItem="l2f-Tk-y26" firstAttribute="centerX" secondItem="zgV-sf-FpE" secondAttribute="centerX" id="W9c-sy-8XN"/>
+                                    <constraint firstAttribute="bottom" secondItem="MJA-LH-i9D" secondAttribute="bottom" constant="188" id="bd9-9D-BQZ"/>
+                                    <constraint firstItem="0Nz-6I-wXA" firstAttribute="top" secondItem="l2f-Tk-y26" secondAttribute="bottom" constant="34" id="czb-vH-ddv"/>
+                                    <constraint firstItem="dN6-hf-SfH" firstAttribute="centerX" secondItem="zgV-sf-FpE" secondAttribute="centerX" id="eV5-d4-Jha"/>
+                                    <constraint firstItem="dN6-hf-SfH" firstAttribute="top" secondItem="0Nz-6I-wXA" secondAttribute="bottom" constant="8" symbolic="YES" id="h9y-qv-GaE"/>
+                                    <constraint firstAttribute="trailing" secondItem="fm9-eF-dOe" secondAttribute="trailing" constant="115" id="oIX-58-CMR"/>
+                                    <constraint firstItem="AHZ-se-FDP" firstAttribute="centerX" secondItem="zgV-sf-FpE" secondAttribute="centerX" id="rSb-PX-U8v"/>
+                                    <constraint firstItem="MJA-LH-i9D" firstAttribute="top" secondItem="dN6-hf-SfH" secondAttribute="bottom" constant="74" id="rgv-JF-dSQ"/>
+                                    <constraint firstItem="l2f-Tk-y26" firstAttribute="top" secondItem="AHZ-se-FDP" secondAttribute="bottom" constant="8" symbolic="YES" id="sos-mX-WcR"/>
+                                    <constraint firstItem="AHZ-se-FDP" firstAttribute="top" secondItem="fm9-eF-dOe" secondAttribute="bottom" constant="60" id="wJ8-cK-y35"/>
+                                    <constraint firstItem="fm9-eF-dOe" firstAttribute="centerX" secondItem="zgV-sf-FpE" secondAttribute="centerX" id="wte-o4-ELW"/>
+                                    <constraint firstItem="0Nz-6I-wXA" firstAttribute="centerX" secondItem="zgV-sf-FpE" secondAttribute="centerX" id="xx6-cJ-GQo"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" red="0.15644717220000001" green="0.52899801729999996" blue="0.95893710850000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="zgV-sf-FpE" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="5ej-Ik-Atz"/>
+                            <constraint firstItem="zgV-sf-FpE" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="bbE-bw-Qr5"/>
+                            <constraint firstItem="zgV-sf-FpE" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="cDm-bJ-6iv"/>
+                            <constraint firstItem="zgV-sf-FpE" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="gfc-oG-gCI"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="140" y="138.6255924170616"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="compactLogo" width="960" height="960"/>
+    </resources>
 </document>
