--- a/VKontakteApp/Base.lproj/LaunchScreen.storyboard
+++ b/VKontakteApp/Base.lproj/LaunchScreen.storyboard
@@ -16,7 +16,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="fullLogo" translatesAutoresizingMaskIntoConstraints="NO" id="Jcz-pN-kYz">
-                                <rect key="frame" x="96" y="402" width="199" height="41"/>
+                                <rect key="frame" x="50" y="392" width="291" height="60"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
@@ -26,7 +26,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="50.769230769230766" y="374.64454976303318"/>
+            <point key="canvasLocation" x="-55" y="358"/>
         </scene>
     </scenes>
     <resources>
